Fix static file serving and redirects for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>EcoScapes Map Viewer</title>
-    <meta http-equiv="refresh" content="0; url=/sample/">
+    <script>
+        // Redirect to the sample map
+        window.location.href = 'sample/';
+    </script>
 </head>
 <body>
-    <p>Redirecting to <a href="/sample/">sample map</a>...</p>
+    <p>Redirecting to <a href="sample/">sample map</a>...</p>
 </body>
 </html>
