--- a/sample/index.html
+++ b/sample/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Map Viewer - Sample</title>
+    <title>Map Viewer - sample</title>
     <style>
         body, html {
             margin: 0;
             padding: 0;
             height: 100%;
+            overflow: hidden;
+            font-family: Arial, sans-serif;
         }
         .map-container {
             position: relative;
@@ -61,7 +63,7 @@
     </div>
     <div class="map-container">
         <iframe id="map1" class="map-iframe active" src="https://felt.com/embed/map/S2S-ConnectivityModel-v0p1-copy-mr4RufF9AQM9B5KvTx1IczZC?loc=50.1164%2C-123.0674%2C8.51z&legend=1&cooperativeGestures=1&link=1&geolocation=0&zoomControls=1&scaleBar=1"></iframe>
-        <iframe id="map2" class="map-iframe" src="https://felt.com/embed/map/Ecosystem-Integrity-hC9CK2ZxJSMufgfdhbOQsuA?loc=50.0873%2C-122.3916%2C8.72z&legend=1&cooperativeGestures=0&link=1&geolocation=0&zoomControls=1&scaleBar=1"></iframe>
+        <iframe id="map2" class="map-iframe" src="https://felt.com/embed/map/Ecosystem-Integrity-hC9CK2ZxJSMufgFDhbOQsuA?loc=50.0873%2C-122.3916%2C8.72z&legend=1&cooperativeGestures=0&link=1&geolocation=0&zoomControls=1&scaleBar=1"></iframe>
     </div>
 
     <script>
