--- a/source.html
+++ b/source.html
@@ -6,9 +6,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Map Viewer - Home</title>
+    <title>Map Viewer - default</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="./static/fonts/custom-icons.css">
+    <link rel="stylesheet" href="/static/fonts/custom-icons.css">
     <style>
         body, html {
             margin: 0;
@@ -64,7 +64,6 @@
           will-change: transform;
           position: relative;
           z-index: 2;
-          height: 100%;
         }
 
         /* When collapsed, slide the info column out of view */
@@ -85,19 +84,14 @@
           height: 100%;
           min-width: 0; /* Allows the map to shrink below its content size */
           overflow: hidden; /* Prevent any content from overflowing */
+          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+          border-radius: 20px;
         }
 
         /* When info column is collapsed, let map take full width */
         .two-column.collapsed .map-container {
           width: 100%;
           grid-column: 1 / -1; /* Make map span full width */
-        }
-
-        /* Map container takes remaining space */
-        .map-container {
-          width: 100%;
-          height: 100%;
-          min-width: 0; /* Allows the map to shrink below its content size */
         }
 
         /* Three-column-section: stack info boxes vertically in left column */
@@ -109,18 +103,6 @@
           margin-bottom: 0; /* remove bottom margin since map is beside */
           height: auto;
         }
-
-        /* Map container: fills the right column */
-        .map-container {
-          grid-column: 2; /* place in right column of grid */
-          width: 100%;
-          height: 100%; /* stretch to full height of app-container */
-          position: relative;
-          border-radius: 8px;
-          overflow: hidden;
-          box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-
 
         .three-column-section:not(.hidden) + .map-container {
           margin-top: 20px;
@@ -387,6 +369,28 @@
 
         .map-column {
           padding: 10px;
+          min-width: 0;
+          width: 100%;
+          height: 100%;
+          box-sizing: border-box;
+          overflow: hidden; /* Prevent map from overflowing */
+        }
+
+        .map-container {
+          width: 100%;
+          height: 100%;
+          position: relative;
+          overflow: hidden;
+          box-sizing: border-box;
+          padding: 0;
+          margin: 0;
+        }
+
+        .map-iframe {
+          width: 100%;
+          height: 100%;
+          border: none;
+          box-sizing: border-box;
         }
 
 
@@ -529,15 +533,6 @@
             line-height: 1.6;
             font-size: 0.9em;
             max-width: 100%;
-        }
-        .map-container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            border-radius: 8px;
-            overflow: hidden;
-            border-radius: 20px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         }
 
         .loading-spinner {
@@ -888,8 +883,6 @@
         }
 
     </style>
-<base href="./">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="app-container">
@@ -3796,7 +3789,7 @@
             // Fetch posts when the page loads with the current indicator's data
             const currentIndicator = {
                 posts: '',
-                title: ''
+                title: '1.1.1 Ecosystem Integrity'
             };
             fetchWordPressPosts(currentIndicator);
         });
